tests/ui-nightly/transmute-ref-src-not-nocell.stderr
error[E0277]: the trait bound `Src: zerocopy::Immutable` is not satisfied
  --> tests/ui-nightly/transmute-ref-src-not-nocell.rs:23:34
   |
23 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                  |
   |                                  unsatisfied trait bound
   |                                  required by a bound introduced by this call
   |
help: the trait `zerocopy::Immutable` is not implemented for `Src`
  --> tests/ui-nightly/transmute-ref-src-not-nocell.rs:20:1
   |
20 | struct Src(AU16);
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `Src`
   = help: the following other types implement trait `zerocopy::Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and $N others
note: required by a bound in `AssertSrcIsImmutable`
  --> tests/ui-nightly/transmute-ref-src-not-nocell.rs:23:34
   |
23 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsImmutable`
   = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-7b6c5a8366e701a6.long-type-987624780952732373.txt'
   = note: consider using `--verbose` to print the full type name to the console
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: zerocopy::Immutable` is not satisfied
  --> tests/ui-nightly/transmute-ref-src-not-nocell.rs:23:34
   |
23 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `zerocopy::Immutable` is not implemented for `Src`
  --> tests/ui-nightly/transmute-ref-src-not-nocell.rs:20:1
   |
20 | struct Src(AU16);
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `Src`
   = help: the following other types implement trait `zerocopy::Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and $N others
note: required by a bound in `AssertSrcIsImmutable`
  --> tests/ui-nightly/transmute-ref-src-not-nocell.rs:23:34
   |
23 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsImmutable`
   = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-7b6c5a8366e701a6.long-type-987624780952732373.txt'
   = note: consider using `--verbose` to print the full type name to the console
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
